crates/plotnik-tests/tests/03-analyze/empty_constructs/empty_tree.txt
Q = ()
------------------ DIAGNOSTICS -------------------
error: empty `()` matches nothing
 --> query.ptk:1:5
  |
1 | Q = ()
  |     ^^
  |
help: use `(_)` to match any named node, or `_` for any node
------------------ DEFINITIONS -------------------
